# PolygonDetectorC

./: CMakeLists.txt  README.md
client/: client.c
include/: detector.h  geometry.h  polygon_processor.h  protocol.h
scripts/: Dockerfile  Dockerfile.client  build-docker.sh  build.sh  create-test-image.sh  docker-compose.yml  generateImage.sh  install-docker.sh  start-client.sh  start-server.sh  test-with-real-image.sh
src/: detector.c  detector_stub.c  geometry.c  main.c  polygon_processor.c  protocol.c  server.c
tests/: test_framework.h  test_geometry.c
